[gd_scene load_steps=3 format=3 uid="uid://b6wlfk6weuvlx"]

[ext_resource type="Script" uid="uid://br6hg6vbaohvg" path="res://assets/scenes/ui/eventing/eventing_ui.gd" id="1_4om2a"]
[ext_resource type="Script" uid="uid://boycm7dv17cdi" path="res://assets/scripts/onActivate/onActivate.gd" id="3_da2vp"]

[node name="eventing_ui" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -293.0
offset_right = 449.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4om2a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="top_bar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer/top_bar"]
custom_minimum_size = Vector2(0, 16.305)
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/top_bar/Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/top_bar/Panel/CenterContainer"]
layout_mode = 2
text = "Event GUI"

[node name="close" type="Button" parent="VBoxContainer/top_bar"]
layout_mode = 2
text = "X"

[node name="events_panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/events_panel"]
layout_mode = 2

[node name="event_entries" type="VBoxContainer" parent="VBoxContainer/events_panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/events_panel/ScrollContainer/event_entries"]
layout_mode = 2
text = "Events"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/events_panel/ScrollContainer/event_entries"]
layout_mode = 2

[node name="add_event" type="Button" parent="VBoxContainer/events_panel/ScrollContainer/event_entries"]
layout_mode = 2
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="close" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="apply" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="Node" type="Node" parent="."]
script = ExtResource("3_da2vp")

[connection signal="pressed" from="VBoxContainer/top_bar/close" to="." method="queue_free"]
[connection signal="pressed" from="VBoxContainer/events_panel/ScrollContainer/event_entries/add_event" to="." method="add_event_entry"]
[connection signal="pressed" from="VBoxContainer/events_panel/ScrollContainer/event_entries/add_event" to="." method="add_to_curr_events" binds= [1]]
[connection signal="pressed" from="VBoxContainer/MarginContainer/close" to="." method="queue_free"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/apply" to="." method="apply_to_object"]
